List only surg amendments on typing ws, list all amendments on lab ws

--- a/YellowstonePathology/UI/AmendmentControlV2.xaml
+++ b/YellowstonePathology/UI/AmendmentControlV2.xaml
@@ -2,26 +2,41 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:TemplateSelectorUI="clr-namespace:YellowstonePathology.UI.TemplateSelector">
+    <UserControl.Resources>
+
+        <HierarchicalDataTemplate x:Key="DataTemplateAmendment">
+            <StackPanel Margin="2,2,2,2" Orientation="Horizontal">
+                <TextBlock Margin="2,2,2,2">Amendment:</TextBlock>
+                <TextBlock Margin="2,2,2,2" Text="{Binding Path=AmendmentDate, Converter={StaticResource ShortDateConverter}}"></TextBlock>
+                <TextBlock Margin="2,2,2,2" Text="{Binding Path=Text}" Height="30" Width="300"></TextBlock>
+            </StackPanel>
+        </HierarchicalDataTemplate>
+
+        <HierarchicalDataTemplate x:Key="DataTemplateAmendmentPanelSetOrder" ItemsSource="{Binding Path=AmendmentCollection}" ItemTemplate="{StaticResource DataTemplateAmendment}">
+            <StackPanel Orientation="Horizontal" Margin="5,5,5,5">
+                <TextBlock Margin="2,2,2,2" VerticalAlignment="Center">Amendments for:</TextBlock>
+                <TextBlock Margin="2,2,2,2" VerticalAlignment="Center" Text="{Binding Path=PanelSetOrder.PanelSetName}"></TextBlock>
+            </StackPanel>
+        </HierarchicalDataTemplate>
+
+    </UserControl.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Name="Row1" Height="*" />
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <ListView Name="ListViewAmendment" Grid.Row="0" ItemsSource="{Binding Path=AmendmentCollection}" SizeChanged="ListViewAmendment_SizeChanged">
-            <ListView.ContextMenu>
+        <TreeView Name="TreeViewAmendment" Grid.Row="0" ItemsSource="{Binding Path=PanelSetOrderAmendmentViewCollection}" 
+                  ItemTemplate="{StaticResource DataTemplateAmendmentPanelSetOrder}" SelectedItemChanged="TreeViewAmendment_SelectedItemChanged">
+            <TreeView.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="Edit" Click="ContextMenuEditAmendment_Click"></MenuItem>
-                    <MenuItem Header="Add" Click="ContextMenuAddAmendment_Click"></MenuItem>
-                    <MenuItem Header="Delete" Click="ContextMenuDeleteAmendment_Click"></MenuItem>
+                    <MenuItem Header="Edit" Click="ContextMenuEditAmendment_Click" Visibility="{Binding Path=ContextMenuAmendmentVisibility}"></MenuItem>
+                    <MenuItem Header="Add" Click="ContextMenuAddAmendment_Click" Visibility="{Binding Path=ContextMenuPSOVisibility}"></MenuItem>
+                    <MenuItem Header="Delete" Click="ContextMenuDeleteAmendment_Click" Visibility="{Binding Path=ContextMenuAmendmentVisibility}"></MenuItem>
                 </ContextMenu>
-            </ListView.ContextMenu>
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=AmendmentDate, Converter={StaticResource ShortDateConverter}}" Header="Date" Width="Auto"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Text}" Header="Amendment Text" Width="Auto"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=ReportNo}" Header="Report No" Width="Auto"/>
-                </GridView>
-            </ListView.View>
-        </ListView>
+            </TreeView.ContextMenu>
+        </TreeView>
+
     </Grid>
 </UserControl>
