--- a/YellowstonePathology/UI/Test/PlateletAssociatedAntibodiesV2ResultPage.xaml
+++ b/YellowstonePathology/UI/Test/PlateletAssociatedAntibodiesV2ResultPage.xaml
@@ -1,4 +1,4 @@
-﻿<Test:ResultControl x:Class="YellowstonePathology.UI.Test.ThrombocytopeniaProfileV2ResultPage"
+﻿<Test:ResultControl x:Class="YellowstonePathology.UI.Test.PlateletAssociatedAntibodiesV2ResultPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -90,19 +90,14 @@
                     <TextBlock Grid.Column="1" Grid.Row="0" Margin="2,2,2,5" Text="{Binding Path=OrderedOnDescription}" Grid.ColumnSpan="3"></TextBlock>
 
                     <TextBlock Grid.Column="0" Grid.Row="1" Margin="2,2,2,5" FontWeight="Bold">Anti Platelet Antibody IgG:</TextBlock>
-                    <TextBox Name="textBoxStemCellEnumeration" Grid.Column="1" Grid.Row="1" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.AntiPlateletAntibodyIgG}" />
+                    <TextBox Name="textBoxIgGResult" Grid.Column="1" Grid.Row="1" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.IgGResult}" />
                     <TextBlock Grid.Column="2" Grid.Row="1" Margin="2,2,2,5" FontWeight="Bold">Reference:</TextBlock>
-                    <TextBox Grid.Column="3" Grid.Row="1" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.AntiPlateletAntibodyIgGReference}" />
+                    <TextBox Grid.Column="3" Grid.Row="1" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.IgGReference}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="2" Margin="2,2,2,5" FontWeight="Bold">Anti Platelet Antibody IgM:</TextBlock>
-                    <TextBox Name="textBoxViability" Grid.Column="1" Grid.Row="2" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.AntiPlateletAntibodyIgM}" />
+                    <TextBox Name="textBoxIgMResult" Grid.Column="1" Grid.Row="2" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.IgMResult}" />
                     <TextBlock Grid.Column="2" Grid.Row="2" Margin="2,2,2,5" FontWeight="Bold">Reference:</TextBlock>
-                    <TextBox Grid.Column="3" Grid.Row="2" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.AntiPlateletAntibodyIgMReference}" />
-
-                    <TextBlock Grid.Column="0" Grid.Row="3" Margin="2,2,2,5" FontWeight="Bold">Reticulated Platelet Analysis:</TextBlock>
-                    <TextBox Name="textBoxWBCCount" Grid.Column="1" Grid.Row="3" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.ReticulatedPlateletAnalysis}" />
-                    <TextBlock Grid.Column="2" Grid.Row="3" Margin="2,2,2,5" FontWeight="Bold">Reference:</TextBlock>
-                    <TextBox Grid.Column="3" Grid.Row="3" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.ReticulatedPlateletAnalysisReference}" />
+                    <TextBox Grid.Column="3" Grid.Row="2" Margin="2,2,2,5" Text="{Binding Path=PanelSetOrder.IgMReference}" />
 
                     <TextBlock Grid.Column="0" Grid.Row="4" Margin="2,2,2,5" FontWeight="Bold">Interpretation:</TextBlock>
                     <TextBox Grid.Column="0" Grid.Row="5" Margin="2,2,2,5" Grid.ColumnSpan="4" TextWrapping="Wrap" Text="{Binding Path=PanelSetOrder.Interpretation}" />
